# FreeRTOS-Posix-Simulator

./: CMakeLists.txt  README.md
include/: FreeRTOSConfig.h
src/app/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  port.c  tasks.c
